--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "creative-rotary-die-online",
   "private": true,
+  "engines": {
+    "node": ">=12.8.0"
+  },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.26",
     "@fortawesome/free-solid-svg-icons": "^5.12.0",
