--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "3.0.0",
   "engines": {
-    "node": ">=12.8.0"
+    "node": "12.14.1"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.26",
