OOM error on deploy fix?

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Rotometrics REF",
-  "name": "Rotometrics Repair Evaluation Form",
+  "short_name": "Creative Rotary Die Online",
+  "name": "Creative Rotary Die Online",
   "icons": [
     {
       "src": "favicon.ico",
