--- a/package.json
+++ b/package.json
@@ -34,8 +34,8 @@
     "yup": "^0.27.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "GENERATE_SOURCEMAP=false react-scripts --max_old_space_size=460 start",
+    "build": "GENERATE_SOURCEMAP=false react-scripts --max_old_space_size=460 build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
