--- a/package.json
+++ b/package.json
@@ -9,20 +9,17 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.26",
     "@fortawesome/free-solid-svg-icons": "^5.12.0",
     "@fortawesome/react-fontawesome": "^0.1.8",
-    "@mikecousins/react-pdf": "^5.1.0",
     "@react-pdf/renderer": "^2.0.0-beta.4",
     "@react-pdf/styled-components": "^1.4.0",
     "bootstrap": "^4.4.1",
     "formik": "^1.5.8",
-    "get-image-data": "github:michaelrhodes/get-image-data#4.1.0",
+    "get-image-data": "^4.1.0",
     "jquery": "^3.4.1",
     "jsqr": "^1.2.0",
     "node-sass": "^4.13.1",
     "qrcode": "^1.4.4",
-    "queue": "^6.0.1",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
-    "react-date-picker": "^7.10.0",
     "react-dom": "^16.12.0",
     "react-dropzone": "^10.2.1",
     "react-pdf": "^4.1.0",
@@ -30,12 +27,14 @@
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.0.1",
-    "typescript": "^3.7.5",
     "yup": "^0.27.0"
   },
+  "devDependencies": {
+    "typescript": "^3.7.5"
+  },
   "scripts": {
-    "start": "GENERATE_SOURCEMAP=false react-scripts --max_old_space_size=460 start",
-    "build": "GENERATE_SOURCEMAP=false react-scripts --max_old_space_size=460 build",
+    "start": "GENERATE_SOURCEMAP=false react-scripts --max-old-space-size=460 start",
+    "build": "GENERATE_SOURCEMAP=false react-scripts --max-old-space-size=460 build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
